--- a/type-list.cabal
+++ b/type-list.cabal
@@ -23,6 +23,6 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.9
-                      ,singletons
+                      ,singletons >= 1.0 && < 1.2
   hs-source-dirs:      src
   default-language:    Haskell2010
