--- a/type-list.cabal
+++ b/type-list.cabal
@@ -21,11 +21,18 @@ source-repository    head
     type: git
     location: https://github.com/marcinmrotek/type-list
 
+flag devel
+  description:  "Development mode (-Werror)"
+  default:      False
+  manual:       True
+
 library
   exposed-modules:     Data.Type.List
-  -- other-modules:       
-  -- other-extensions:    
   build-depends:       base >=4.7 && <4.9
                       ,singletons >= 1.0 && < 1.2
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -Wall 
+  if flag(devel)
+    ghc-options:       -Werror
+
