--- a/type-list.cabal
+++ b/type-list.cabal
@@ -1,5 +1,5 @@
 name:                type-list
-version:             0.3.0.3
+version:             0.3.0.4
 synopsis:            Operations on type-level lists and tuples.
 description:         Operations on type-level lists and tuples, together with their curried versions.
 license:             BSD3
@@ -13,6 +13,7 @@ extra-source-files:  README.md changelog.md
 tested-with:         GHC == 7.8.4
                    , GHC == 7.10.1
                    , GHC == 7.10.2
+				   , GHC == 8.0.1
 cabal-version:       >=1.10
 source-repository    head
     type: git
@@ -25,7 +26,7 @@ flag devel
 
 library
   exposed-modules:     Data.Type.List
-  build-depends:       base >=4.7 && <4.9
+  build-depends:       base >=4.7 && < 5
                       ,singletons >= 1.0 && < 2.2
   hs-source-dirs:      src
   default-language:    Haskell2010
