--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,6 @@
 flags: {}
 packages:
 - '.'
-extra-deps: []
-resolver: nightly-2016-05-27
+extra-deps:
+  - singletons-2.2
+resolver: nightly-2016-06-18
